--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.2.1",
     "core-js": "^3.8.3",
+    "rgbaster": "^2.1.1",
     "vee-validate": "^4.7.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
