library upd, UI upd

--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "click-outside-vue3": "^4.0.1",
     "core-js": "^3.8.3",
-    "primevue": "^3.23.0",
     "rgbaster": "^2.1.1",
-    "swiper": "^9.0.2",
+    "v-click-outside": "^3.2.0",
     "vee-validate": "^4.7.3",
     "vue": "^3.2.13",
+    "vue-click-outside": "^1.1.0",
     "vue-router": "^4.0.3",
+    "vue3-carousel": "^0.2.9",
     "vuex": "^4.0.0",
     "yup": "^0.32.11"
   },
