--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lin,t"
+    "lint": "vue-cli-service lin,t",
+    "start": "node server.js"
   },
   "dependencies": {
     "@vueuse/core": "^9.13.0",
